syntax = "proto3";

package proj_name_api;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "npm.proto";

option go_package = "/proj_name_api";
option (npm_package) = "@proj_name/api";

service proj_nameAPI {
  rpc Version(Version.Request) returns (Version.Response) {
    option (google.api.http) = {
      get: "/api/version"
      body: "*"
    };
  };
}

message Version {
  message Request {}

  message Response {
    string version = 1;
    google.protobuf.Timestamp client_timestamp = 2;
  }
}
